# alligator-wasm-alloc

./: .gitignore  .gitmodules  CONTRIBUTORS.md  Cargo.toml  Makefile  README.md  benchmarks-record.sh  c-test.c  cpufreqctl
.github/workflows/: rust.yml
docs/: 2021-04-26-report.md
src/: bench-alloc-all.rs  bench-alloc-report.rs  bench-random-report.rs  bench-use-global.rs  clib.rs  generate-cheaders.rs  hello-world.rs  lib.rs  main.rs
src/alloc/: heap.rs  mod.rs
web-demo/: index.html  index.js
website/: .editorconfig  .gitignore  package.json  tsconfig.json
website/src/: App.tsx  colors.ts  index.html  index.tsx
