[package]
name = "alligator"
version = "0.1.0"
authors = ["Noah Huppert <contact@noahh.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# cdylib is a dynamic library (ex., .so, .dll on linux and windows) https://doc.rust-lang.org/reference/linkage.html
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.70"
wee_alloc = "0.4.5"
console_error_panic_hook = "0.1.6"
web-sys = "0.3.47"
