[package]
name = "alligator"
version = "0.1.0"
authors = ["Noah Huppert <contact@noahh.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "alligatorc"
path = "src/clib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "hello-world"
path = "src/hello-world.rs"

[[bin]]
name = "generate-cheaders"

[dependencies]
cfg-if = "1.0.0"
libc = "0.2.88"
cbindgen = "0.18.0"
