[package]
name = "alligator"
version = "0.1.1"
authors = ["Noah Huppert <contact@noahh.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
metrics = []

[lib]
name = "alligatorc"
path = "src/clib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "bench-alloc-all"
path = "src/bench-alloc-all.rs"

[[bin]]
name = "bench-use-global"
path = "src/bench-use-global.rs"

[[bin]]
name = "bench-random-report"
path = "src/bench-random-report.rs"

[[bin]]
name = "generate-cheaders"

[dependencies]
cfg-if = "1.0.0"
libc = "0.2.88"
cbindgen = "0.18.0"
rand = "0.8.3"
